bug fix overflow-x

--- a/css/index.css
+++ b/css/index.css
@@ -8,8 +8,8 @@ body{
   display: grid;
   grid-template-columns: 3% 21% 65% 10% 1%;
   grid-template-rows: 20% 75% 5%;
-  width: 100vw;
   height: 100vh;
+  overflow-x: hidden;
 
   /*background-image: url(../images/mainimage.png);*/
 }
